Big solutions much points such wow

--- a/Hash.Pizza/Properties/launchSettings.json
+++ b/Hash.Pizza/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Hash.Pizza": {
       "commandName": "Project",
-      "commandLineArgs": "Input/example.in"
+      "commandLineArgs": "Input/big.in"
     }
   }
 }
